[package]
name = "lightron"
version = "0.1.0"
authors = ["lightron"]
description = "Lightron Web Server"
edition = "2018"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.4.0"
serde_derive = "1.0.125"
serde = "1.0.125"
toml = "0.5.8"
tokio = { version = "1.5.0", features = ["full"] }
tokio-rustls = "0.22.0"
bytes = "1.0.1"
h2 = "0.3.2"
http = "0.2.4"
rustls-pemfile = "0.2.1"
crossbeam-utils = "0.8.3"
mime_guess = "2.0.3"
simplelog = "0.10.0"
log = "0.4.14"
linkcheck = "0.4.0"

[target.'cfg(windows)'.dependencies]
windows-service = "0.3.1"


